; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mach_loader.c_get_va_fsid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mach_loader.c_get_va_fsid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode_attr = type { i32, i32 }

@va_fsid64 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vnode_attr*)* @get_va_fsid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_va_fsid(%struct.vnode_attr* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vnode_attr*, align 8
  store %struct.vnode_attr* %0, %struct.vnode_attr** %3, align 8
  %4 = load %struct.vnode_attr*, %struct.vnode_attr** %3, align 8
  %5 = load i32, i32* @va_fsid64, align 4
  %6 = call i64 @VATTR_IS_SUPPORTED(%struct.vnode_attr* %4, i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.vnode_attr*, %struct.vnode_attr** %3, align 8
  %10 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load %struct.vnode_attr*, %struct.vnode_attr** %3, align 8
  %14 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %12, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i64 @VATTR_IS_SUPPORTED(%struct.vnode_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
